<?xml version="1.0" encoding="UTF-8" ?>

<resources>
  <string name="settingsSelectThisAccount">Select Account %1$s</string>
  <string name="settingsMoreInformation">More Information</string>
  <string name="settingsAddLibrary">+ Add Library</string>
  <string name="settingsMyLibraries">My Libraries</string>
  <string name="settings">Settings</string>
  <string name="settingsAbout">About Palace</string>
  <string name="settingsAboutSummary" />
  <string name="settingsAccounts">Libraries</string>
  <string name="settingsAccountsSummary">Add, remove, or configure libraries</string>
  <string name="settingsAcknowledgements">Acknowledgements</string>
  <string name="settingsAcknowledgementsSummary" />
  <string name="settingsCommit">Commit</string>
  <string name="settingsBuildSummary" />
  <string name="settingsCancel">Cancel</string>
  <string name="settingsCardCreatorLabel">Don\'t have a library card?</string>
  <string name="settingsCardCreatorSignUp">Sign up</string>
  <string name="settingsCOPPADeleteBooks">Delete books?</string>
  <string name="settingsCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="settingsCOPPAOver13">I am over 13</string>
  <string name="settingsCustomOPDS">Custom OPDS Feed</string>
  <string name="settingsCustomOPDSCreate">Create</string>
  <string name="settingsCustomOPDSInvalidURI">Not a valid URI.</string>
  <string name="settingsCustomOPDSURL">Custom feed URL…</string>
  <string name="settingsDebug">Debug options</string>
  <string name="settingsDebugSummary" />
  <string name="settingsDelete">Delete</string>
  <string name="settingsDetails">Details</string>
  <string name="settingsDevAddCustomOpdsFeed">Add Custom OPDS Feed</string>
  <string name="settingsDevAdobeDrmActivations">Adobe DRM Activations</string>
  <string name="settingsDevCacheDir">Show Cache Directory</string>
  <string name="settingsDevCardCreatorUserNewYork">Card Creator: Pretend the user is in New York</string>
  <string name="settingsDevCrash">Crash</string>
  <string name="settingsDevCrashlytics">Crashlytics</string>
  <string name="settingsDevCrashlyticsCurrentUserId">Current Crashlytics User ID</string>
  <string name="settingsDevDrmSupport">DRM Support</string>
  <string name="settingsDevEnableHiddenLibraries">Enable Hidden Libraries</string>
  <string name="settingsDevEnableManualLCPPassphrase">Enable Manual LCP Passphrase</string>
  <string name="settingsDevEnableTimeTracking">Enable Time Tracking</string>
  <string name="settingsDevFailNextStartup">Cause the next application startup to fail</string>
  <string name="settingsDevForgetAllAnnouncements">Forget All Announcements</string>
  <string name="settingsDevPlaceholder">Placeholder</string>
  <string name="settingsDevSendAnalytics">Send Analytics</string>
  <string name="settingsDevSendErrorLogs">Send Error Logs</string>
  <string name="settingsDevShowErrorPage">Show Error Page</string>
  <string name="settingsDevShowSupportedBooks">Only show supported books (Uncheck to show unsupported books)</string>
  <string name="settingsDevSyncAccounts">Sync Accounts</string>
  <string name="settingsDevRebootNewUI">Reboot In New UI Mode</string>
  <string name="settingsDevTestingFeatures">Testing Features</string>
  <string name="settingsDevToggleOpenEBooksQAAccount">Toggle OpenEBooks QA Account</string>
  <string name="settingsDevUserSeenLibrarySelection">User has seen library selection screen?</string>
  <string name="settingsDocumentation">Documentation</string>
  <string name="settingsEULA">User Agreement</string>
  <string name="settingsEULAStatement">I agree to the terms of the End User License Agreement.</string>
  <string name="settingsEULASummary" />
  <string name="settingsFaq">FAQ</string>
  <string name="settingsFaqSummary" />
  <string name="settingsPrivacy">Privacy Policy</string>
  <string name="settingsPrivacySummary" />
  <string name="settingsInfo">App info</string>
  <string name="settingsLicense">Software Licenses</string>
  <string name="settingsLicenseSummary" />
  <string name="settingsLogin">Sign in</string>
  <string name="settingsLoginWith">Sign in with %1$s</string>
  <string name="settingsLoginAlternatives">Alternative Login Methods</string>
  <string name="settingsLogout">Sign out</string>
  <string name="settingsPassword">Password</string>
  <string name="settingsPasswordHide">Hide password</string>
  <string name="settingsPasswordShow">Show password</string>
  <string name="settingsPlaceholder">Lorem ipsum dolor sit amet, probatus volutpat has at, vis adhuc iuvaret omittantur an, sadipscing conclusionemque his ad. Eam ut simul tempor. Primis consetetur appellantur vim eu, eum an iudico dolorum. Ad vis utamur honestatis, sanctus debitis referrentur an eam.</string>
  <string name="settingsReportIssue">Report an issue…</string>
  <string name="settingsSyncBookmarks">Sync bookmarks</string>
  <string name="settingsTapToDebug">Debug mode in %1$d&#8230;</string>
  <string name="settingsUserName">User Name</string>
  <string name="settingsVersion">App version</string>
  <string name="settingsVersionSummary" />
  <string name="settingsVersionCore">Core version</string>
  <string name="settingsVersionCoreSummary" />
  <string name="settingsDebugTransifex">This string should have been translated by Transifex.</string>
</resources>
