<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:scrollbarAlwaysDrawHorizontalTrack="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
      android:id="@+id/settingsVersionDevTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDebug"
      android:textSize="24sp"
      android:textStyle="bold" />

    <Button
      android:id="@+id/settingsVersionDevCrash"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevCrash" />

    <Button
      android:id="@+id/settingsVersionDevShowCacheDir"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevCacheDir" />

    <Button
      android:id="@+id/settingsVersionDevSendReports"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevSendErrorLogs" />

    <Button
      android:id="@+id/settingsVersionDevShowError"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevShowErrorPage" />

    <Button
      android:id="@+id/settingsVersionDevSyncAnalytics"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevSendAnalytics" />

    <Button
      android:id="@+id/settingsVersionDevSyncAccounts"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevSyncAccounts" />

    <Button
      android:id="@+id/settingsVersionDevUnacknowledgeAnnouncements"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevForgetAllAnnouncements" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevDrmSupport"
      android:textSize="24sp"
      android:textStyle="bold" />

    <TableLayout
      android:id="@+id/settingsVersionDrmSupport"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevAdobeDrmActivations"
      android:textSize="14sp"
      android:textStyle="bold" />

    <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:scrollbarAlwaysDrawHorizontalTrack="true"
      android:scrollbarAlwaysDrawVerticalTrack="true"
      android:scrollbars="vertical|horizontal">

      <TableLayout
        android:id="@+id/settingsVersionDrmAdobeActivations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

          <TextView android:text="@string/settingsDevPlaceholder" />

          <TextView android:text="@string/settingsDevPlaceholder" />

          <TextView android:text="@string/settingsDevPlaceholder" />

          <TextView android:text="@string/settingsDevPlaceholder" />

          <TextView android:text="@string/settingsDevPlaceholder" />
        </TableRow>
      </TableLayout>
    </HorizontalScrollView>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevCrashlytics"
      android:textSize="24sp"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevCrashlyticsCurrentUserId"
      android:textSize="14sp"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/settingsVersionCrashlyticsID"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:textAllCaps="true"
      android:fontFamily="monospace"
      android:text="@string/settingsDevPlaceholder"
      android:textIsSelectable="true"
      android:textSize="14sp"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevTestingFeatures"
      android:textSize="24sp"
      android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsVersionDevProductionLibrariesSwitch"
      android:theme="@style/Enabled.Switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:checked="false"
      android:enabled="true"
      android:text="@string/settingsDevEnableHiddenLibraries" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsVersionDevFailNextBootSwitch"
      android:theme="@style/Enabled.Switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:checked="false"
      android:enabled="true"
      android:text="@string/settingsDevFailNextStartup" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsVersionDevSeenLibrarySelectionScreen"
      android:theme="@style/Enabled.Switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:checked="false"
      android:enabled="true"
      android:text="@string/settingsDevUserSeenLibrarySelection" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsVersionDevCardCreatorLocationSwitch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:checked="false"
      android:enabled="true"
      android:text="@string/settingsDevCardCreatorUserNewYork"
      android:theme="@style/Enabled.Switch"
      android:visibility="gone" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsVersionDevShowOnlySupported"
      android:theme="@style/Enabled.Switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:checked="false"
      android:enabled="true"
      android:text="@string/settingsDevShowSupportedBooks" />

    <Button
      android:id="@+id/settingsVersionDevCustomOPDS"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/settingsDevAddCustomOpdsFeed" />

    <Button
      android:id="@+id/settingsVersionDevEnableOpenEBooksQA"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:checked="false"
      android:enabled="true"
      android:text="@string/settingsDevToggleOpenEBooksQAAccount" />

    <include layout="@layout/settings_debug_library_registry" />
  </LinearLayout>
</ScrollView>
